@@ -3,3 +3,4 @@
 	- Fixed RTC progressing day one hour late
 	- Fixed sound problems in Casper
 	- Savestates, SRAMs and configfiles are now placed in the appdata dir, not alongside the ROM anymore
+	- Speed factor selectable
